k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fix-politics-app
  name: fix-politics-app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
  selector:
    app: fix-politics-app
