k8s/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: cfc-app
  labels:
    app: cfc-app
spec:
  to:
    kind: Service
    name: cfc-app
    weight: 100
  port:
    targetPort: http
